changing the landing page and did the signout

--- a/beehive-dashboard/src/Styles/Pages/Dashboard.scss
+++ b/beehive-dashboard/src/Styles/Pages/Dashboard.scss
@@ -4,7 +4,7 @@ body {
     background-color: #E8E3CD;
 }
 .dashboard-container {
-    position: relative;
+    position: absolute;
 }
 
 // .navbar {
