--- a/beehive-dashboard/src/Styles/Pages/Landing.scss
+++ b/beehive-dashboard/src/Styles/Pages/Landing.scss
@@ -5,10 +5,10 @@
     padding: 0;
   }
   .landing-container {
-    position: fixed;
     width: 100%;
+    position: relative; /* or remove position entirely */
+    overflow-x: hidden;
   }
-  
   .banner-container {
     position: relative;
     overflow: hidden;
