--- a/beehive-dashboard/src/Styles/Pages/HiveDashboard.scss
+++ b/beehive-dashboard/src/Styles/Pages/HiveDashboard.scss
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #E8E3CD;
+    position: fixed;
 }
 .hiveDashboard-container {
     position: relative;
