--- a/beehive-dashboard/src/Styles/Pages/Graphs.scss
+++ b/beehive-dashboard/src/Styles/Pages/Graphs.scss
@@ -37,7 +37,6 @@
   @media screen and (max-width: 1080px) {
     width: 85%;
   }
-
   @media screen and (max-width: 765px) {
     width: 82%;
   }
@@ -49,18 +48,14 @@
   }
 
   .topic {
-    position: absolute;
-    top: 0.75rem;
-    left: 1.8rem;
     font-size: 1.2rem;
     font-weight: bold;
     color: #504f4f;
-    overflow: hidden;
     padding: 0.5rem 1.2rem;
     border-radius: 1.5rem;
     background-color: rgba(241, 240, 238, 0.767);
     backdrop-filter: blur(2px);
-    z-index: 99;
+    margin-left: 0; 
   }
 
   .video_card {
@@ -119,7 +114,6 @@
         flex-direction: column;
         justify-content: space-evenly;
         align-items: start;
-
         overflow: hidden;
         margin-top: 1.7rem;
 
@@ -137,7 +131,6 @@
       position: absolute;
       top: 1rem;
       right: 1rem;
-
       border-color: transparent;
       height: 30px;
       width: 30px;
@@ -253,8 +246,6 @@
       position: relative;
       width: 100%;
       height: 100%;
-      // padding: 1rem 1rem;
-      // margin: 1rem 1rem;
       overflow: hidden;
     }
 
@@ -277,7 +268,6 @@
       position: absolute;
       top: 1rem;
       right: 1rem;
-      overflow: hidden;
       border-color: transparent;
       height: 30px;
       width: 30px;
@@ -337,8 +327,49 @@
     }
   }
 
-  // gap: 5rem;
-  // margin: 5rem 5rem;
+  .graph_header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: rgb(241, 240, 238);
+    z-index: 100;
+    padding: 0.75rem 1.8rem;
+    flex-wrap: nowrap;
+
+    .topic {
+      margin: 0;
+      flex-shrink: 0;
+    }
+
+    .button_container {
+      display: flex;
+      gap: 0.5rem;
+      flex-wrap: nowrap;
+      justify-content: flex-end;
+    }
+
+    @media screen and (max-width: 600px) {
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 0.5rem 1rem;
+      flex-wrap: wrap;
+
+      .topic {
+        font-size: 1rem;
+        padding: 0.4rem 1rem;
+      }
+
+      .button_container {
+        flex-direction: row;
+        justify-content: flex-start;
+        width: 100%;
+        margin-top: 0.5rem;
+      }
+    }
+  }
 }
 
 .close_button {
@@ -404,9 +435,6 @@
 }
 
 .export_button {
-  margin-top: 2rem;
-  margin-bottom: -2rem;
-  margin-left: 60rem;
   background-color: darken($color: rgb(54, 54, 54), $amount: 10);
   border-color: transparent;
   color: #ffffff;
@@ -425,13 +453,19 @@
     color: darken($color: rgb(54, 54, 54), $amount: 13);
     background-color: rgb(244, 244, 244);
   }
+
+  @media screen and (max-width: 600px) {
+    width: 5rem;
+    padding: 0.3rem 0.8rem;
+    font-size: 0.9rem;
+  }
 }
 
 .sort_button {
   appearance: none;
   -webkit-appearance: none;
   position: absolute;
-  top:7rem;
+  top: 7rem;
   right: 2rem;
   background-color: darken($color: rgb(54, 54, 54), $amount: 10);
   border-color: transparent;
@@ -483,18 +517,7 @@
   border-color: transparent;
 }
 
-.graph_header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  align-content: center;
-}
-
 .back-button {
-  margin-top: 2rem;
-  margin-bottom: -2rem;
-  margin-left: 3rem;
   background-color: darken($color: rgb(5, 197, 91), $amount: 10);
   border-color: transparent;
   color: #ffffff;
@@ -512,5 +535,11 @@
   &:hover {
     color: darken($color: rgb(54, 54, 54), $amount: 13);
     background-color: rgb(244, 244, 244);
+  }
+
+  @media screen and (max-width: 600px) {
+    width: 5rem;
+    padding: 0.3rem 0.8rem;
+    font-size: 0.9rem;
   }
 }
